# Appointment-scheduling-platform-project

./: .gitignore
ai_suggestion/: README.md  pyproject.toml
ai_suggestion/src/ai_suggestion/: crew.py  main.py
ai_suggestion/src/ai_suggestion/config/: agents.yaml  tasks.yaml
backend/: .env  pyproject.toml  requirements.txt
backend/ai_suggestions/agents_guider/: hello.py  pyproject.toml  test.py
backend/app/: main.py
backend/app/api/: admin.py  admin_breaks.py  admin_dashboard.py  admin_schedule.py  ai_data.py  ai_response.py  appointments.py  auth.py  doctor.py  doctor_actions.py  doctor_dashboard.py  notification.py  patient.py  patient_actions.py  patient_dashboard.py  slots.py  system_actions.py  test.py
backend/app/core/: config.py  database.py  dependencies.py  scheduler.py  security.py  test_db.py
backend/app/models/: ai_history.py  appointment.py  availability.py  breaks.py  doctor.py  patient.py  user.py
backend/app/schemas/: appointment.py  availability.py  bookings.py  doctor.py
backend/app/services/: admin_service.py  ai_data_service.py  auth_service.py  email_service.py  notification_service.py  scheduling.py  slot_service.py
backend/app/utils/: google_auth.py  google_meets.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: admin.js  ai.js  api.js  auth.js  booking.js  patient.js
frontend/src/components/: AppointmentTable.jsx  ChatBot.jsx  Navbar.jsx  SlotButton.jsx
frontend/src/layouts/: PatientLayout.jsx
frontend/src/pages/View/: Home.jsx
(+13 files in other folders)
