[project]
name = "ai_suggestion"
version = "0.1.0"
description = "ai_suggestion using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
ai_suggestion = "ai_suggestion.main:run"
run_crew = "ai_suggestion.main:run"
train = "ai_suggestion.main:train"
replay = "ai_suggestion.main:replay"
test = "ai_suggestion.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
